--- a/website/headers/style.scss
+++ b/website/headers/style.scss
@@ -1,8 +1,14 @@
 .header {
   display: flex;
   padding: 40px;
+  height: 80px;
   background-image: linear-gradient(to bottom, var(--blue), var(--light));
   justify-content: space-between;
+}
+
+.logo {
+  height: max-content;
+  align-self: center;
 }
 
 .navigation {
@@ -19,11 +25,23 @@
 .top-links a {
   color: var(--light);
   font-size: 16px;
+  padding-right: 15px;
+}
+
+.top-links a:last-of-type {
+  padding-right: 0;
+}
+
+.bottom-links {
+  display: flex;
+  align-items: center;
 }
 
 .bottom-links a {
   text-decoration: none;
   font-size: 22px;
+  padding-right: 30px;
+  font-weight: bold;
 }
 
 .bottom-links .red {
@@ -32,4 +50,20 @@
 
 .bottom-links .orange {
   color: var(--orange);
+}
+
+.search {
+  background: transparent;
+  border: 1px solid var(--dark);
+  border-right: none;
+  padding: 2px;
+  height: 20px;
+}
+
+.magnifying {
+  border-top: 1px solid var(--dark);
+  border-bottom: 1px solid var(--dark);
+  border-right: 1px solid var(--dark);
+  padding: 2px;
+  height: 20px;
 }
