--- a/website/user-form/style.css
+++ b/website/user-form/style.css
@@ -67,7 +67,9 @@ select {
     justify-content: flex-end;
 }
 
-button {
+.buttons a {
+    cursor: pointer;
+    text-align: center;
     width: 170px;
     border-radius: 15px;
     color: var(--light);
@@ -75,6 +77,7 @@ button {
     font-family: "Century Gothic", sans-serif;
     font-size: 26px;
     border: 1px solid var(--orange);
+    text-decoration: none;
 }
 
 .newsletter {
@@ -113,5 +116,5 @@ button {
 }
 
 input[type=checkbox] {
-    display:none;
+    display: none;
 }
